=========
Changelog
=========

0.1b7 (unreleased)
------------------

- Nothing changed yet.


0.1b6 (2013-03-04)
------------------

- Fixed rst issues when read by pypi which combines readme.rst and history.txt
  [ichim-david]

0.1b5 (2013-03-04)
------------------

- Feature: "Completely wipe password storage" action is now traced under zope log.
  [alecghica]
- Bugfix: 'ComponentLookupError' error when adding a local user.
  [alecghica]
- Feature: added error image and 'Unable to communicate with chat server' message
  when unable to bind the user to jabber server
  [alecghica]
- Feature: Add a VCard when registering a user on the XMPP server.
  [jcbrand]
- Feature: Make manual user registration idempotent (ignore already registered
  users).
  [jcbrand]
- Users are no longer registered upon creation. They must either be registered
  manually, or upon next logged in visit.
  [jcbrand]


0.1b4 (2013-02-02)
------------------

- Bugfix for "Deregister All" in @@xmpp-user-setup page. Site root was not set
  in callback method.
  [jcbrand]


0.1b3 (2013-01-17)
------------------

- Add option to completely clear the XMPP password utility.
  [jcbrand]
- Add upgrade step to make sure the registry is reloaded so that the
  "auto-register on login" entry is added.
  [jcbrand]
- Bugfix. Always get the XMPP virtual host from the registry.
  [jcbrand]
- Bugfix. When auto-subscribing, LDAP users' fullnames weren't being shown.
  [jcbrand]


0.1b2 (2013-01-17)
------------------

- Add a configuration setting to turn auto-register on login on. It's disabled
  by default.
  [jcbrand]


0.1b1 (2013-01-16)
------------------

- Feature: if not already registered, Plone users get
  registered on jabber server on login
  [alecghica]
- Bugfix: no need to refresh browser for users registered
  on login, they are binded on the fly
  [alecghica]
- Bugfix: "Deregister ALL Users" function, credentials were
  left un-deleted under IXMPPPasswordStorage resulting in