@@ -1,7 +1,10 @@
 include *.rst
-recursive-include src/collective/xmpp/core *.zcml
-recursive-include src/collective/xmpp/core/locales *.mo
-recursive-include src/collective/xmpp/core/locales *.po
+global-exclude *pyc
+global-exclude *~
+global-exclude *.un~
+global-include *mo
+global-include *po
+global-include *.zcml
 graft docs
 prune docs/.build
 graft src/collective/xmpp/core/profiles
